--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/results-summary-component-code/index.css">
-  <link rel="stylesheet" href="/results-summary-component-code/general.css">
+  <link rel="stylesheet" href="/general.css">
+  <link rel="stylesheet" href="/index.css">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/results-summary-component-code/assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Results summary component</title>
 
@@ -34,25 +34,25 @@
       <span class="summary-section__title">Summary</span>
     </div>
     <div class="summary-score-container reaction-container">
-      <img class="summary-score-icon" src="/results-summary-component-code/assets/images/icon-reaction.svg" alt=" ">
+      <img class="summary-score-icon" src="/assets/images/icon-reaction.svg" alt=" ">
       <span class="summary-category reaction-color">Reaction</span>
       <span class="summary-score">80</span>
       <span class="summary-score--out-of">/ 100</span>
     </div>
     <div class="summary-score-container memory-container">
-      <img class="summary-score-icon" src="/results-summary-component-code/assets/images/icon-memory.svg" alt=" ">
+      <img class="summary-score-icon" src="/assets/images/icon-memory.svg" alt=" ">
       <span class="summary-category memory-color">Memory</span>
       <span class="summary-score">92</span>
       <span class="summary-score--out-of">/ 100</span>
     </div>
     <div class="summary-score-container verbal-container">
-      <img class="summary-score-icon" src="/results-summary-component-code/assets/images/icon-verbal.svg" alt=" ">
+      <img class="summary-score-icon" src="/assets/images/icon-verbal.svg" alt=" ">
       <span class="summary-category verbal-color">Verbal</span>
       <span class="summary-score">61</span>
       <span class="summary-score--out-of">/ 100</span>
     </div>
     <div class="summary-score-container visual-container">
-      <img class="summary-score-icon" src="/results-summary-component-code/assets/images/icon-visual.svg" alt=" ">
+      <img class="summary-score-icon" src="/assets/images/icon-visual.svg" alt=" ">
       <span class="summary-category visual-color">Visual</span>
       <span class="summary-score">72</span>
       <span class="summary-score--out-of">/ 100</span>
