--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/general.css">
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="general.css">
+  <link rel="stylesheet" href="index.css">
 
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
   
